--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>React + TS + Mobx</title>
+		<title>Staff - React + TS + Mobx</title>
+		<script type="module" crossorigin src="./assets/index.js"></script>
+		<link rel="stylesheet" crossorigin href="./assets/index.css" />
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="/src/index.tsx"></script>
 	</body>
 </html>
